lots of stuff. now need to clean up/refactor a ton... but like it matters :)

--- a/WindowsFormsApplication1/Tree of Savior Experience Viewer.csproj
+++ b/WindowsFormsApplication1/Tree of Savior Experience Viewer.csproj
@@ -69,6 +69,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -82,16 +83,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExperienceData.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ExperienceViewerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ExperienceViewerForm.Designer.cs">
+      <DependentUpon>ExperienceViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ExperienceViewerForm.resx">
+      <DependentUpon>ExperienceViewerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
