implemented output to text files for streamers and refactored a little

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -8,6 +8,7 @@
   <appSettings>
     <add key="PollingIntervalMs" value="250"/>
     <add key="CurrentExpMemAddress" value="0x01487F30"/>
+    <add key="StreamOutput" value="true"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
