Added theme setting options that are saved between sessions.
Fixed a design time related bug due to the "ExperienceDataToTextService" being initialized during design time rather than runtime only.

Added guards in ExperienceData model to prevent notificiation spam to the UI when the value has not changed for the property.
Removed notifications from ExperienceData for properties which are no longer dynamic (value calculated through the getter).

--- a/TOSExpViewer/Properties/Settings.settings
+++ b/TOSExpViewer/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ToS.ExpTracker.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TOSExpViewer.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Top" Type="System.Double" Scope="User">
@@ -7,6 +7,12 @@
     </Setting>
     <Setting Name="Left" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="MetroThemeBaseColour" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MetroThemeAccentColour" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
