--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="TOSExpViewer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="ToS.ExpTracker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
@@ -14,6 +15,20 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
     <userSettings>
+        <TOSExpViewer.Properties.Settings>
+            <setting name="Top" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Left" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="MetroThemeBaseColour" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MetroThemeAccentColour" serializeAs="String">
+                <value />
+            </setting>
+        </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
             <setting name="Top" serializeAs="String">
                 <value>0</value>
