--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -88,12 +88,17 @@
     </Compile>
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="Core\Constants.cs" />
+    <Compile Include="Core\MetroThemeBaseColour.cs" />
+    <Compile Include="Core\MetroThemeColours.cs" />
+    <Compile Include="Core\StringExtensions.cs" />
     <Compile Include="Core\WindowSettingsBuilder.cs" />
     <Compile Include="Model\ExperienceData.cs" />
     <Compile Include="Core\InvertedBooleanConverter.cs" />
+    <Compile Include="Model\MenuItem.cs" />
     <Compile Include="Service\ExperienceDataToTextService.cs" />
-    <Compile Include="ShellViewModel.cs" />
+    <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Model\TosMonitor.cs" />
+    <Compile Include="ViewModels\ThemeSelectorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -125,7 +130,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ShellView.xaml">
+    <Page Include="Views\ShellView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ThemeSelectorView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
