TODO - Update the cog button to produce a context menu where the menu options both show and control the current visibility state of the controls.
Refactored exp controls into their own classes. This allows us to extend them later or modify the logic of individual controls without affecting the others if desired.

Added a context menu option directly on the controls so they can be hidden quickly, the shown/hide state is saved between sessions.

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -28,6 +28,30 @@
             <setting name="MetroThemeAccentColour" serializeAs="String">
                 <value />
             </setting>
+            <setting name="HideCurrentBaseExperience" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideGainedBaseExperience" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideCurrentBaseExperencePercent" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideRequiredBaseExperience" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideKillsTilNextLevel" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideLastExperienceGain" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideExperiencePerHour" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HideTimeToLevel" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
             <setting name="Top" serializeAs="String">
