--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -92,10 +92,18 @@
     <Compile Include="Core\MetroThemeColours.cs" />
     <Compile Include="Core\StringExtensions.cs" />
     <Compile Include="Core\WindowSettingsBuilder.cs" />
+    <Compile Include="Model\ExperienceComponents\CurrentBaseExperiencePercentComponent.cs" />
     <Compile Include="Model\ExperienceData.cs" />
     <Compile Include="Core\InvertedBooleanConverter.cs" />
+    <Compile Include="Model\ExperienceComponents\ExperiencePerHourComponent.cs" />
+    <Compile Include="Model\ExperienceComponents\KillsTilNextLevelComponent.cs" />
+    <Compile Include="Model\ExperienceComponents\LastExperienceGainComponent.cs" />
     <Compile Include="Model\MenuItem.cs" />
+    <Compile Include="Model\ExperienceComponents\RequiredBaseExperienceComponent.cs" />
+    <Compile Include="Model\ExperienceComponents\TimeToLevelComponent.cs" />
     <Compile Include="Service\ExperienceDataToTextService.cs" />
+    <Compile Include="Model\ExperienceComponents\CurrentBaseExperienceComponent.cs" />
+    <Compile Include="Model\ExperienceComponents\ExperienceComponent.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Model\TosMonitor.cs" />
     <Compile Include="ViewModels\ThemeSelectorViewModel.cs" />
