Added last experience gain percent control

--- a/TOSExpViewer/Properties/Settings.settings
+++ b/TOSExpViewer/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="HideTimeToLevel" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="HideLastExperienceGainPercent" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
