--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -52,6 +52,9 @@
             <setting name="HideTimeToLevel" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HideLastExperienceGainPercent" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
             <setting name="Top" serializeAs="String">
