my ocd is too strong. this should make everyone happy. didn't want to use the standard localization way because that requires different releases for each language.

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -22,10 +22,10 @@
             <setting name="Left" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="MetroThemeBaseColour" serializeAs="String">
+            <setting name="MetroThemeBaseColor" serializeAs="String">
                 <value />
             </setting>
-            <setting name="MetroThemeAccentColour" serializeAs="String">
+            <setting name="MetroThemeAccentColor" serializeAs="String">
                 <value />
             </setting>
             <setting name="HideCurrentBaseExperience" serializeAs="String">
