updated base experience address for 11/17 patch

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -8,7 +8,7 @@
   </configSections>
   <appSettings>
     <add key="PollingIntervalMs" value="250"/>
-    <add key="CurrentExpMemAddress" value="0x01487F30"/>
+    <add key="CurrentExpMemAddress" value="0x0145D7F8"/>
     <add key="StreamOutput" value="true"/>
   </appSettings>
     <startup> 
