Refactored experience control class into a generic implementation. Extracted an interface so that can be passed to consuming classes which may not care about the implementation details.

--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -92,19 +92,12 @@
     <Compile Include="Core\MetroThemeColours.cs" />
     <Compile Include="Core\StringExtensions.cs" />
     <Compile Include="Core\WindowSettingsBuilder.cs" />
-    <Compile Include="Model\ExperienceControls\CurrentBaseExperiencePercentControl.cs" />
-    <Compile Include="Model\ExperienceControls\LastExperienceGainPercentControl.cs" />
+    <Compile Include="Model\IExperienceControl.cs" />
     <Compile Include="Model\ExperienceData.cs" />
     <Compile Include="Core\InvertedBooleanConverter.cs" />
-    <Compile Include="Model\ExperienceControls\ExperiencePerHourControl.cs" />
-    <Compile Include="Model\ExperienceControls\KillsTilNextLevelControl.cs" />
-    <Compile Include="Model\ExperienceControls\LastExperienceGainControl.cs" />
     <Compile Include="Model\MenuItem.cs" />
-    <Compile Include="Model\ExperienceControls\RequiredBaseExperienceControl.cs" />
-    <Compile Include="Model\ExperienceControls\TimeToLevelControl.cs" />
     <Compile Include="Service\ExperienceDataToTextService.cs" />
-    <Compile Include="Model\ExperienceControls\CurrentBaseExperienceControl.cs" />
-    <Compile Include="Model\ExperienceControls\ExperienceControl.cs" />
+    <Compile Include="Model\ExperienceControl.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Model\TosMonitor.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
@@ -130,7 +123,7 @@
     <None Include="app.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
