Fixed bug in experience control class where "Show" binding to the settings property was reversed.
Exposed the elapsed time in a new run time exp control that shows how long the current exp session has been.

Added an additional constructor argument to the experience control class for selecting the property that we want to listen for change events (this means we only update the Value when the property we care about changes).

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -55,6 +55,9 @@
             <setting name="HideLastExperienceGainPercent" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HideSessionTime" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
             <setting name="Top" serializeAs="String">
