--- a/TOSExpViewer/Properties/Settings.settings
+++ b/TOSExpViewer/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="HideLastExperienceGainPercent" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="HideSessionTime" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
