--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\MenuItem.cs" />
     <Compile Include="Service\ExperienceDataToTextService.cs" />
     <Compile Include="Model\ExperienceControl.cs" />
+    <Compile Include="Service\ExperienceUpdateService.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Model\TosMonitor.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
