--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Core\MetroThemeColours.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\WindowSettingsBuilder.cs" />
+    <Compile Include="Model\ExperienceContainer.cs" />
     <Compile Include="Model\IExperienceControl.cs" />
     <Compile Include="Model\ExperienceData.cs" />
     <Compile Include="Core\InvertedBooleanConverter.cs" />
