so class experience works... ...if you plug in your current level, rank, and memory address for each section :)

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -9,6 +9,7 @@
   <appSettings>
     <add key="PollingIntervalMs" value="250"/>
     <add key="CurrentExpMemAddress" value="0x0145D7F8"/>
+    <add key="CurrentClassExpMemAddress" value="0x3DD80E4C"/>
     <add key="StreamOutput" value="true"/>
   </appSettings>
     <startup> 
