added class tier offset and use that to retrieve current class experience

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -9,7 +9,8 @@
   <appSettings>
     <add key="PollingIntervalMs" value="250"/>
     <add key="CurrentExpMemAddress" value="0x0145D7F8"/>
-    <add key="CurrentClassExpMemAddress" value="0x3DD80E4C"/>
+    <add key="CurrentClassExpMemAddress" value="0x011FACD8"/>
+    <add key="CurrentClassTier" value="0x011FACE6"/>
     <add key="StreamOutput" value="true"/>
   </appSettings>
     <startup> 
