--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -11,7 +11,7 @@
     <add key="CurrentExpMemAddress" value="0x0145D7F8"/>
     <add key="CurrentClassExpMemAddress" value="0x011FACD8"/>
     <add key="CurrentClassTier" value="0x011FACE6"/>
-    <add key="StreamOutput" value="true"/>
+    <add key="StreamOutput" value="false"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
@@ -59,6 +59,9 @@
             </setting>
             <setting name="HideSessionTime" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ShowClassExperienceRow" serializeAs="String">
+                <value>True</value>
             </setting>
         </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
