--- a/TOSExpViewer/Properties/Settings.settings
+++ b/TOSExpViewer/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="HideSessionTime" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ShowClassExperienceRow" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
