set class level/rank by selecting it from the menu

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -63,6 +63,12 @@
             <setting name="ShowClassExperienceRow" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ClassLevel" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="ClassRank" serializeAs="String">
+                <value>1</value>
+            </setting>
         </TOSExpViewer.Properties.Settings>
         <ToS.ExpTracker.Properties.Settings>
             <setting name="Top" serializeAs="String">
