--- a/TOSExpViewer/Properties/Settings.settings
+++ b/TOSExpViewer/Properties/Settings.settings
@@ -47,5 +47,11 @@
     <Setting Name="ShowClassExperienceRow" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ClassLevel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="ClassRank" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
