moved the experience utility functions and tables into a separate class

--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Model\ExperienceContainer.cs" />
     <Compile Include="Model\IExperienceControl.cs" />
     <Compile Include="Model\ExperienceData.cs" />
+    <Compile Include="Service\ExperienceUtilityService.cs" />
     <Compile Include="UI\InvertedBooleanToVisibilityConverter.cs" />
     <Compile Include="Model\MenuItem.cs" />
     <Compile Include="Service\ExperienceDataToTextService.cs" />
