--- a/TOSExpViewer/TOSExpViewer.csproj
+++ b/TOSExpViewer/TOSExpViewer.csproj
@@ -94,9 +94,12 @@
     <Compile Include="Core\MetroWindowManager.cs" />
     <Compile Include="Core\WindowSettingsBuilder.cs" />
     <Compile Include="Model\ExpCard.cs" />
+    <Compile Include="Model\ExperienceCardData.cs" />
     <Compile Include="Model\ExperienceContainer.cs" />
+    <Compile Include="Model\ExperienceType.cs" />
     <Compile Include="Model\IExperienceControl.cs" />
     <Compile Include="Model\ExperienceData.cs" />
+    <Compile Include="Service\CardCalculatorService.cs" />
     <Compile Include="Service\ExperienceUtilityService.cs" />
     <Compile Include="UI\InvertedBooleanToVisibilityConverter.cs" />
     <Compile Include="Model\MenuItem.cs" />
