updated current base experience and class tier addresses for 20151201 patch

--- a/TOSExpViewer/App.config
+++ b/TOSExpViewer/App.config
@@ -8,9 +8,9 @@
   </configSections>
   <appSettings>
     <add key="PollingIntervalMs" value="250"/>
-    <add key="CurrentExpMemAddress" value="0x0145D7F8"/>
+    <add key="CurrentExpMemAddress" value="0x0145D818"/>
     <add key="CurrentClassExpMemAddress" value="0x011FACD8"/>
-    <add key="CurrentClassTier" value="0x011FACE6"/>
+    <add key="CurrentClassTier" value="0x011FAD04"/>
     <add key="StreamOutput" value="false"/>
   </appSettings>
     <startup> 
